# Finetune-a-judge-model

./: .gitignore  README.md  pyproject.toml
judge-mvp/: .env.example  README.md  pyproject.toml  requirements.txt
judge-mvp/notes/: baseline_03_results_analysis.md  step_04_qwen35_27b_run_analysis.md  step_05_filter_run_analysis.md  step_06b_dpo_data_quality_analysis_260414.md  step_07_sft_lora_run_analysis_260331.md  step_09_comparison_run_analysis.md
judge-mvp/prompts/: main_user.txt  teacher_user.txt
judge-mvp/scripts/: 01_inspect_dataset.py  02_build_binary_dataset.py  03_train_baseline_cls.py  04_generate_rationale_pseudo.py  05_filter_pseudo_labels.py  06_build_sft_jsonl.py  07_train_sft_lora.py  08_eval.py  09_compare_models.py  _prompts.py
notes/: step_04_qwen35_27b_run_analysis.md  step_07_sft_lora_run_analysis.md  step_09_comparison_run_analysis.md
prompts/: main_system.txt  teacher_system.txt
scripts/: 03_train_baseline_cls.py  04_plus_expand_teacher_targets.py  06b_build_dpo_jsonl.py  08_eval.py  _common.py  _eval_common.py
