[project]
name = "judge-mvp"
version = "0.1.0"
description = "WildGuardMix content safety judge MVP"
requires-python = ">=3.10"
dependencies = [
  "datasets>=2.21.0",
  "transformers>=4.45.0",
  "peft>=0.12.0",
  "trl>=0.10.1",
  "accelerate>=0.34.0",
  "scikit-learn>=1.5.0",
  "pandas>=2.2.0",
  "torch>=2.3.0",
  "bitsandbytes>=0.43.0",
  "sentencepiece>=0.2.0",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.uv.pip]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
